--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "dotenv": "^16.5.0",
+    "framer-motion": "^12.9.2",
     "next": "^15.2.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1"
