Revert "Merge pull request #1 from Eloe321/frontend-features"
This reverts commit 34c1f9626539e994cb4a04ffcba60502be91933d, reversing
changes made to 90cfd835a05f8ca1441083f3b802c22b8c6fae95.

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -6,6 +6,6 @@
       "@workspace/ui/*": ["./src/*"]
     }
   },
-  "include": [".", "../../next.config.js"],
+  "include": ["."],
   "exclude": ["node_modules", "dist"]
 }
