--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/passport-jwt": "^4.0.1",
     "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
@@ -26,8 +27,7 @@
   },
   "dependencies": {
     "@nestjs/passport": "^11.0.5",
-    "@supabase/ssr": "^0.6.1",
-    "@supabase/supabase-js": "^2.49.4",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.9.2",
     "next": "^15.2.3",
