--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
   "dependencies": {
     "@nestjs/passport": "^11.0.5",
     "bcrypt": "^5.1.1",
-    "dotenv": "^16.5.0",
     "framer-motion": "^12.9.2",
     "next": "^15.2.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "bcrypt"
+    ]
   }
 }
