--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,8 +12,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@workspace/ui": "workspace:*",
+    "@vercel/blob": "^1.1.1",
     "@workspace/types": "workspace:*",
+    "@workspace/ui": "workspace:*",
     "lucide-react": "^0.475.0",
     "next": "^15.2.3",
     "next-themes": "^0.4.4",
